--- a/New Hire Training/Test 2 tmAdaptiveDef/Schematic Test 1.html
+++ b/New Hire Training/Test 2 tmAdaptiveDef/Schematic Test 1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mini Manual Training</title>
+  <title>Schematic Test 2 TMADF</title>
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <link rel="stylesheet" href="../../JavaScriptLibraries/testCss.css">
@@ -14,7 +14,7 @@
      <center> Model# - GTS16BBMBLCC</center>
     </span>
     <br>
-    <center>
+    
     <span>Color Picker</span>
     <span class="brownBox" id="brbID" onclick="changeColors(brown)">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <span class="blackBox" id="bbID" onclick="changeColors(black)">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -23,7 +23,7 @@
     <span class="blueBox" id="blbID" onclick="changeColors('blue')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <span class="greenBox" id="gbID" onclick="changeColors('green')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <span class="yellowBox"  id="ybID"onclick="changeColors('yellow')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-      </center>
+      
 </div>
 
 </body>
