--- a/New Hire Training/Test1 tmDefControl/Schematic Test 1.html
+++ b/New Hire Training/Test1 tmDefControl/Schematic Test 1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mini Manual Training</title>
+  <title>Schematic Test 1 TMNF</title>
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <link rel="stylesheet" href="../../JavaScriptLibraries/testCss.css">
@@ -16,6 +16,7 @@
     <br>
     <center>
     <span>Color Picker</span>
+    <span class="brownBox" id="brbID" onclick="changeColors(brown)">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <span class="blackBox" id="bbID" onclick="changeColors(black)">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <span class="redBox" id="rbID" onclick="changeColors('red')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
     <span class="orangeBox" id="obID" onclick="changeColors('orange')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
