--- a/New Hire Training/Mini Manual Training/Mini Manual Training.html
+++ b/New Hire Training/Mini Manual Training/Mini Manual Training.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Draggable Meter Leads</title>
+  <title>Mini Manual Training</title>
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <link rel="stylesheet" href="../../JavaScriptLibraries/movie.css">
