--- a/New Hire Training/SXS/SXS Interactive.html
+++ b/New Hire Training/SXS/SXS Interactive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Schematic Test 1 TMNF</title>
+  <title>TMNF Timer Interactive</title>
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <link rel="stylesheet" href="../../JavaScriptLibraries/testCss.css">
@@ -9,17 +9,12 @@
 
 <body>
   <div id="showWindow"></div>
+  <div id="showWindow"></div>
   <div class="questions">
     <center>
-    <span>Color Picker</span>
-    <span class="brownBox" id="brbID" onclick="changeColors(brown)">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="blackBox" id="bbID" onclick="changeColors(black)">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="redBox" id="rbID" onclick="changeColors('red')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="orangeBox" id="obID" onclick="changeColors('orange')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="blueBox" id="blbID" onclick="changeColors('blue')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="greenBox" id="gbID" onclick="changeColors('green')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="yellowBox"  id="ybID"onclick="changeColors('yellow')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-      </center>
+    <span>Color Picker</span><br>
+    <input type="Color" name="colorPicker" id="myColorPicker" onchange="highlightColor=this.value">
+  </center>
 </div>
 
 </body>
