update menu for wall oven

--- a/Menu.html
+++ b/Menu.html
@@ -53,7 +53,8 @@
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/SXS/SXS Interactive.html">SXS Interactive Schematic</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Cafe Refrigerator/Cafe Interactive.html">Cafe K-Cup Interactive Schematic</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Mini Manual Training/Mini Manual Training.html">Mini Manual Training</a>
-<a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Test/Basic Electricity.html">Basic Electricity</a>
+    <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Test/Basic Electricity.html">Basic Electricity</a>
+    <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/New Oven/Oven Intractive Schematic.html">Wall Oven Interactive Schematic</a>
   </div>
 </div>
 
