change to zoom buttons

--- a/New Hire Training/New Oven/Oven Intractive Schematic.html
+++ b/New Hire Training/New Oven/Oven Intractive Schematic.html
@@ -20,7 +20,10 @@
   <div id="showWindow"></div>
   <div id="showWindow"></div>
   <div class="questions">
-<span>Selected Color</span>
+    <button onclick="clickZoomUP()" style="width: 100px">ZOOM IN</button>
+    <br>
+    <button onclick="clickZoomDown()" style="width: 100px">ZOOM OUT</button>
+<br><br>
 
 <div id="redBox" onclick="changeColors('red')" class="noSelect" style="cursor:pointer;display:block; width:100px;width:100px; background-color:brown";><center>Red</center></div>
 
