--- a/New Hire Training/Test 2 tmAdaptiveDef/TMNF Adaptive Interactive.html
+++ b/New Hire Training/Test 2 tmAdaptiveDef/TMNF Adaptive Interactive.html
@@ -18,8 +18,11 @@
 
 <body>
   <div id="showWindow"></div>
-  <div id="colorBoxDiv" class="questions">
-
+  <div class="questions">
+    <button onclick="clickZoomUP()" style="width: 100px">ZOOM IN</button>
+    <br>
+    <button onclick="clickZoomDown()" style="width: 100px">ZOOM OUT</button>
+<br><br>
 <span id="redBox" onclick="changeColors('red')" class="noSelect" style="cursor:pointer;display:block; width:100px;width:100px; background-color:brown";><center>Red</center></span>
 
 <span id="blueBox" onclick="changeColors('blue')" class="noSelect" style="cursor:pointer;display:block; width:100px;width:100px; background-color:blue";><center>Blue</center></span>
