--- a/New Hire Training/Dryer Schematic/Dryer Interactive Schematic.html
+++ b/New Hire Training/Dryer Schematic/Dryer Interactive Schematic.html
@@ -18,10 +18,11 @@
 
 <body>
   <div id="showWindow"></div>
-  <div id="showWindow"></div>
   <div class="questions">
-<span>Selected Color</span>
-
+    <button onclick="clickZoomUP()" style="width: 100px">ZOOM IN</button>
+    <br>
+    <button onclick="clickZoomDown()" style="width: 100px">ZOOM OUT</button>
+<br><br>
 <div id="redBox" onclick="changeColors('red')" class="noSelect" style="cursor:pointer;display:block; width:100px;width:100px; background-color:brown";><center>Red</center></div>
 
 <div id="blueBox" onclick="changeColors('blue')" class="noSelect" style="cursor:pointer;display:block; width:100px;width:100px; background-color:blue";><center>Blue</center></div>
