--- a/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
+++ b/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
@@ -19,9 +19,9 @@
 <body>
   <div id="showWindow"></div>
   <div class="questions">
-    <button onclick="clickZoomUP()" style="width: 100px">ZOOM IN</button>
+    <button onclick="clickZoomUP()" style="width: 100px">+</button>
     <br>
-    <button onclick="clickZoomDown()" style="width: 100px">ZOOM OUT</button>
+    <button onclick="clickZoomDown()" style="width: 100px">-</button>
 <br><br>
 <div id="redBox" onclick="changeColors('red')" class="noSelect" style="cursor:pointer;display:block; width:100px;width:100px; background-color:brown";><center>Red</center></div>
 
