--- a/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
+++ b/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
@@ -13,40 +13,18 @@
       -ms-user-select: none;
       user-select: none;
     }
+    .zoomSlider {
+    width: 90%;
+}
   </style>
 </head>
 
 <body>
+ <center> <input type="range" min="1" max="100" value="50" class="zoomSlider"></center>
   <div id="showWindow"></div>
+
   <div class="questions">
-    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- Created with Inkscape (http://www.inkscape.org/) -->
-
-<svg width="79.771812mm" height="4.3467259mm" viewBox="0 0 79.771812 4.3467259" version="1.1">
-
-  <g
-     id="layer1" transform="translate(-82.799803,-89.869049)">
-    <circle
-       style="opacity:1;vector-effect:none;fill:#000000;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:0.26458332;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke"
-       id="path6155"
-       cx="92.042412"
-       cy="-122.74777"
-       r="2.173363"
-       transform="rotate(90)" />
-    <path
-       style="opacity:1;vector-effect:none;fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:#020304;stroke-width:1.32291663;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke"
-       d="M 161.90074,92.042412 H 83.470682"
-       id="path815"
-       inkscape:connector-curvature="0" />
-  </g>
-</svg>
-
-
-
-
-
-
-
+  
     <!-- <button onclick="clickZoomUP()" style="width: 100px">+</button>
     <br>
     <button onclick="clickZoomDown()" style="width: 100px">-</button> -->
