--- a/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
+++ b/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
@@ -13,18 +13,19 @@
       -ms-user-select: none;
       user-select: none;
     }
-    .zoomSlider {
+    .zoomSliderClass {
+      z-index: 1000;
     width: 90%;
 }
   </style>
 </head>
 
 <body>
- <center> <input type="range" min="1" max="100" value="50" class="zoomSlider"></center>
+ 
   <div id="showWindow"></div>
 
   <div class="questions">
-  
+  <center><input type="range" min="1" max="5" value="1" step="0.01" class="zoomSliderClass" id="zoomSlider"></center>
     <!-- <button onclick="clickZoomUP()" style="width: 100px">+</button>
     <br>
     <button onclick="clickZoomDown()" style="width: 100px">-</button> -->
