--- a/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
+++ b/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
@@ -6,32 +6,39 @@
   <!DOCTYPE html>
   <link rel="stylesheet" href="../../JavaScriptLibraries/testCss.css">
   <style type="text/css">
-    .noSelect{
-      color: white;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-    .zoomSliderClass {
-      z-index: 1000;
-    width: 100%;
+  .slider {
+  position: fixed;
+  width: 90%;
+  height: 10px;
+  padding: 0;
+  z-index: 10000;
+  background: #d3d3d3;
+  bottom: 10px;
 }
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
   </style>
 </head>
 
 <body>
- 
+ <input type="range" min="1" max="5" value="0" step="0.01" id="zoomSlider" class="slider">
   <div id="showWindow"></div>
 
   <div class="questions">
-    <center>Zoom</center>
-  <input type="range" min="1" max="5" value="0" step="0.01" id="zoomSlider">
-    <!-- <button onclick="clickZoomUP()" style="width: 100px">+</button>
-    <br>
-    <button onclick="clickZoomDown()" style="width: 100px">-</button> -->
-<br>
-<center>Highlight Colors</center>
 <div id="redBox" onclick="changeColors('red')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:brown";><center>Red</center></div>
 
 <div id="blueBox" onclick="changeColors('blue')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:blue";><center>Blue</center></div>
