--- a/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
+++ b/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
@@ -5,70 +5,24 @@
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <link rel="stylesheet" href="../../JavaScriptLibraries/testCss.css">
-  <style type="text/css">
-  .slider {
-  position: fixed;
-  width: 90%;
-  height: 25px;
-  padding: 0;
-  z-index: 10000;
-  background: #d3d3d3;
-  bottom: 10px;
-}
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 50px;
-    height: 50px;
-    background: #4CAF50;
-    cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-    width: 50px;
-    height: 50px;
-    background: #4CAF50;
-    cursor: pointer;
-}
-
-
-
-  </style>
 </head>
-
 <body>
-
- <input type="range" min="1" max="5" value="0" step="0.01" id="zoomSlider" class="slider">
-
+  <input type="range" min="1" max="5" value="0" step="0.01" id="zoomSlider" class="slider">
   <div id="showWindow"></div>
-
   <div class="questions">
-<div id="redBox" onclick="changeColors('red')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:brown";><center>Red</center></div>
-
-<div id="blueBox" onclick="changeColors('blue')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:blue";><center>Blue</center></div>
-
-<div id="orangeBox" onclick="changeColors('orange')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:orange";><center>Orange</center></div>
-
-<div id="yellowBox" onclick="changeColors('yellow')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:yellow";><center>Yellow</center></div>
-
-<div id="purpleBox" onclick="changeColors('purple')"class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:purple";><center>Purple</center></div>
-
-<div id="greenBox" onclick="changeColors('green')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:green";><center>Green</center></div>
-
-<div id="greyBox" onclick="changeColors('grey')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:grey";><center>Grey</center></div>
-
-<div id="brownBox" onclick="changeColors('brown')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:brown";><center>Brown</center></div>
-
-<div id="blackBox" onclick="changeColors('black')" class="noSelect" style="cursor:pointer;display:block; width:100%; background-color:black";><center>Black</center></div>
+    <div id="redBox" onclick="changeColors('red')" style="cursor:pointer;display:block; width:100px; background-color:brown; color:white";><center>Red</center></div>
+    <div id="blueBox" onclick="changeColors('blue')" style="cursor:pointer;display:block; width:100%; background-color:blue; color:white";><center>Blue</center></div>
+    <div id="orangeBox" onclick="changeColors('orange')" style="cursor:pointer;display:block; width:100%; background-color:orange; color:black";><center>Orange</center></div>
+    <div id="yellowBox" onclick="changeColors('yellow')" style="cursor:pointer;display:block; width:100%; background-color:yellow";><center>Yellow</center></div>
+    <div id="purpleBox" onclick="changeColors('purple')" style="cursor:pointer;display:block; width:100%; background-color:purple; color:white";><center>Purple</center></div>
+    <div id="greenBox" onclick="changeColors('green')" style="cursor:pointer;display:block; width:100%; background-color:green";><center>Green</center></div>
+    <div id="greyBox" onclick="changeColors('grey')" style="cursor:pointer;display:block; width:100%; background-color:grey";><center>Grey</center></div>
+    <div id="brownBox" onclick="changeColors('brown')" style="cursor:pointer;display:block; width:100%; background-color:brown";><center>Brown</center></div>
+    <div id="blackBox" onclick="changeColors('black')" style="cursor:pointer;display:block; width:100%; background-color:black; color:white";><center>Black</center></div>
 </div>
-
 </body>
 <script src="../../JavaScriptLibraries/TweenMax.min.js"></script>
 <script src="../../JavaScriptLibraries/draggable.js"></script>
-<script src="../../JavaScriptLibraries/DrawSVGPlugin.min.js"></script>
-<script src="../../JavaScriptLibraries/jquery-3.2.1.min.js"></script>
-<script src="../../JavaScriptLibraries/MorphSVGPlugin.js"></script>
-<script src="../../JavaScriptLibraries/TextPlugin.min.js"></script>
 <script src="../../JavaScriptLibraries/Refrigeration Variables.js"></script>
 <script src="javaScript.js"></script>
 </html>
