--- a/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
+++ b/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <link rel="stylesheet" href="../../JavaScriptLibraries/testCss.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
   <input type="range" min="1" max="5" value="0" step="0.01" id="zoomSlider" class="slider">
