--- a/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
+++ b/New Hire Training/Test1 tmDefControl/TMNF Timer Interactive.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <input type="range" min="1" max="5" value="0" step="0.01" id="zoomSlider" class="slider">
-  <div id="showWindow"></div>
+  <div id="showWindow" style="background-color: red"></div>
   <div class="questions">
     <div id="redBox" onclick="changeColors('red')" style="cursor:pointer;display:block; width:100px; background-color:brown; color:white";><center>Red</center></div>
     <div id="blueBox" onclick="changeColors('blue')" style="cursor:pointer;display:block; width:100%; background-color:blue; color:white";><center>Blue</center></div>
