--- a/New Hire Training/New Oven/Oven Intractive Schematic.html
+++ b/New Hire Training/New Oven/Oven Intractive Schematic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TMNF Timer Interactive</title>
+  <title>Oven Interactive Schematic</title>
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <link rel="stylesheet" href="../../JavaScriptLibraries/testCss.css">
