--- a/New Hire Training/1 tmTimerDefIAS/tmTimerDefIAS.html
+++ b/New Hire Training/1 tmTimerDefIAS/tmTimerDefIAS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dryer Interactive Schematic</title>
+  <title>TMNF Timer Defrost Interactive Schematic</title>
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <link rel="stylesheet" href="../../JavaScriptLibraries/testCss.css">
