--- a/Menu.html
+++ b/Menu.html
@@ -56,7 +56,7 @@
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/6 newWallOvenIAS/newWallOvenIAS.html">Wall Oven Interactive Schematic</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Mini Manual Training/Mini Manual Training.html">Mini Manual Training</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Basic Electricity/Basic Electricity.html">Basic Electricity</a>
-    <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/7 Cooking New Hire Training/washerNewHireTraining.html">Washer Training</a>
+    <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/7 washerTraining/washerNewHireTraining.html">Washer Training</a>
      
 
   </div>
