--- a/New Hire Training/7 washerTraining/washerNewHireTraining.html
+++ b/New Hire Training/7 washerTraining/washerNewHireTraining.html
@@ -6,39 +6,60 @@
   <!DOCTYPE html>
   <!-- <link rel="stylesheet" href="../../JavaScriptLibraries/testCss.css"> -->
   <style type="text/css">
+  body{
+    background: black;
+    overflow: hidden;
+  }
+
+  #showWindow{
+    width: 95%;
+    margin: auto;
+  }
+
   .playerControls{
-  	/*background-color: grey;*/
-  		width: 95%;
-  		position : fixed;
-  		bottom : 10px;
-  		left: 1%;
-  		z-index: 10000;
-  		margin: auto;
-  		
+    width: 95%;
+    position : fixed;
+    bottom : 10px;
+    left: 3%;
+    z-index: 1;
+    margin: auto;
   }
 
+/*Zoom Slider Code*/
+.zoomSliderVisible {
+  -webkit-appearance: none;
+   width: 92%;
+   height: 20px;
+   background: #d3d3d3;
+   opacity: 0.2;
+   -webkit-transition: .2s;
+   transition: opacity .2s;
+   position: absolute;
+   margin: auto;
+   right: 0;
+   left: 1%;
+ }
 
-  .zoomSliderVisible {
-    -webkit-appearance: none;
-    width: 90%;
-    height: 25px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-
-    position: absolute;
-     margin: auto;
-     top: 0;
-     right: 0;
-     bottom: 0;
-     left: 0;
+.zoomSliderVisible:hover {
+    opacity: 1;
 }
-  }
-  	.zoomSliderVisible {
-  		width: 5000px;
-  	}
+
+.zoomSliderVisible::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.zoomSliderVisible::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
   	.zoomSliderHidden {
   		display: none;
   	}
@@ -49,7 +70,7 @@
 	<div class="playerControls">
   <input type="range" min="1" max="5" value="0" step="0.01" id="zoomSlider" class="zoomSliderHidden">
   <button id='btn1' onclick = pause()>PLAY</button>
-  <!-- <input type="range" min="0" max="1" value="0" step="0.001" id="progressSlider" class="zoomSliderVisible"> -->
+  <input type="range" min="0" max="1" value="0" step="0.001" id="progressSlider" class="zoomSliderVisible">
   </div>
   <div id="showWindow"></div>
   <!-- <div class="questions">
