--- a/New Hire Training/Dryer Movie/Mini Manual Training.html
+++ b/New Hire Training/Dryer Movie/Mini Manual Training.html
@@ -18,7 +18,7 @@
         <option value="traceDiagram">Line Trace</option>
         <option value="moveMeterLeads">Move Meter Lead</option>
       </select>
-      <span id="codeText" contenteditable="true">Code Text</span>
+      <span id="codeText">Code Text</span>
     </span>
 <!-- Callout Line -->
     <span id="addLine" class="editorHidden">
@@ -166,10 +166,10 @@
 <script src="../../JavaScriptLibraries/jquery-3.2.1.min.js"></script>
 <script src="../../JavaScriptLibraries/MorphSVGPlugin.js"></script>
 <script src="../../JavaScriptLibraries/TextPlugin.min.js"></script>
-<script src="../../JavaScriptLibraries/coreScript.js"></script>
+<!-- <script src="../../JavaScriptLibraries/coreScript.js"></script> -->
 <script src="../../JavaScriptLibraries/Refrigeration Variables.js"></script>
 <script src="../../JavaScriptLibraries/Progress Bar.js"></script>
 <script src="javaScript.js"></script>
 <!-- <script src="../../JavaScriptLibraries/Multimeter.js"></script> -->
-<script src="../../JavaScriptLibraries/editor.js"></script>
+<!-- <script src="../../JavaScriptLibraries/editor.js"></script> -->
 </html>
