menu name change

--- a/Menu.html
+++ b/Menu.html
@@ -60,7 +60,7 @@
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Basic Electricity/Basic Electricity.html">Basic Electricity</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/7 washerTraining/washerNewHireTraining.html">Washer Training</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/8 PVM9179/PVM9179 IAS.html">PVM9179 Schematic</a>
-
+    <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/monogram_range_single_relay/Monogram Single Relay.html">Monogram Oven Single Relay</a>
   </div>
 </div>
 
