--- a/New Hire Training/monogram_range_single_relay/Monogram Single Relay.html
+++ b/New Hire Training/monogram_range_single_relay/Monogram Single Relay.html
@@ -14,7 +14,7 @@
 </body>
 <script src="../../JavaScriptLibraries/TweenMax.min.js"></script>
 <script src="../../JavaScriptLibraries/ThrowPropsPlugin.js"></script>
-<script src="../../JavaScriptLibraries/Draggable.js"></script>
+<script src="../../JavaScriptLibraries/Draggable.min.js"></script>
 <script src="javascript.js"></script>
 <script src="../../JavaScriptLibraries/panAndZoom.js"></script>
 
