--- a/New Hire Training/monogram_range_single_relay/Monogram Single Relay.html
+++ b/New Hire Training/monogram_range_single_relay/Monogram Single Relay.html
@@ -15,7 +15,7 @@
 <script src="../../JavaScriptLibraries/TweenMax.min.js"></script>
 <script src="../../JavaScriptLibraries/ThrowPropsPlugin.js"></script>
 <script src="../../JavaScriptLibraries/Draggable.min.js"></script>
-<script src="javascript.js"></script>
+<script src="javaScript.js"></script>
 <script src="../../JavaScriptLibraries/panAndZoom.js"></script>
 
 
