--- a/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
+++ b/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
@@ -39,6 +39,10 @@
   width: 100%;
 }
 
+audio::-webkit-media-controls-enclosure {
+    max-width: 100%; /*or inherit*/
+}
+
 #backButton {
   bottom: 2%;
   left: 1%;
