--- a/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
+++ b/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
@@ -31,17 +31,15 @@
     padding: 10px;
 }
 .playerControls {
-  display: inline;
-  position: absolute;
+  display: block;
+  position: fixed;
   top: 10%;
   left: 1%;
   bottom: 0%;
   width: 100%;
 }
 
-audio::-webkit-media-controls-enclosure {
-    max-width: 100%; /*or inherit*/
-}
+
 
 #backButton {
   bottom: 2%;
