--- a/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
+++ b/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html
@@ -31,15 +31,13 @@
     padding: 10px;
 }
 .playerControls {
-  display: block;
-  position: fixed;
+  display: inline;
+  position: absolute;
   top: 10%;
   left: 1%;
   bottom: 0;
-  width: 80%;
+  width: 100%;
 }
-
-
 
 #backButton {
   bottom: 2%;
