--- a/New Hire Training/storyLineSample/story.html
+++ b/New Hire Training/storyLineSample/story.html
@@ -6,7 +6,7 @@
     <!-- Created using Storyline 360 - http://www.articulate.com  -->
     <!-- version: 3.22.17236.0 -->
 
-    <title>Sample</title>
+    <title>storyLineSample</title>
     <style>
         body {
             background: #ffffff;
