--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -6,12 +6,13 @@
   <!DOCTYPE html>
   <style type="text/css">
   .mainWindow {
-    position: /*fixed;
+    position: 
+    fixed;
     left: 0%;
     margin: auto;
     width: 100%;
     height:100vh;
-    overflow: hidden;*/
+    overflow: hidden;
     }
     .playerControls {
     position: fixed;
