--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -12,7 +12,7 @@
     /*margin: auto;
     width: 100%;
     height:100vh;*/
-    overflow: hidden;
+    overflow: hidden;?
     }
     .playerControls {
     position: fixed;
