--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -9,10 +9,10 @@
     position: 
     fixed;
     left: 0%;
-    /*margin: auto;
+    margin: auto;
     width: 100%;
-    height:100vh;*/
-    overflow: hidden;?
+    /*height:100vh;*/
+    /*overflow: hidden;*/
     }
     .playerControls {
     position: fixed;
