--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -6,6 +6,8 @@
   <!DOCTYPE html>
   <style type="text/css">
   .mainWindow {
+    position: fixed;
+    top: 0px;
    /* position: 
     fixed;
     left: 0%;
