--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -20,9 +20,9 @@
     .playerControls {
     position: fixed;
     padding: 1px;
-    bottom: 1%;
+    bottom: 0px;
     margin: auto;
-    width: 98%;
+    width: 100%;
   }
 </style>
 </head>
