--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -28,8 +28,8 @@
 </head>
 <body bgcolor="#D3D3D3">
   <div id="main" class="mainWindow" style="align-content: center;"></div>
-  <audio id='music' controls='controls' class="playerControls">
-    <source src='slide2Audio.ogg' type='audio/ogg' />
+  <audio id='music' controls='controls' class="playerControls" autoplay>
+    <source id="audio" src='slide2Audio.ogg' type='audio/ogg' />
   </audio>
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
