--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -6,16 +6,12 @@
   <!DOCTYPE html>
   <style type="text/css">
   .mainWindow {
-    position: fixed;
-    top: 0px;
-    left: 0%;
-   /* position: 
-    fixed;
+     position: fixed;
     left: 0%;
     margin: auto;
     width: 100%;
-    height:100vh;*/
-    /*overflow: hidden;*/
+    height:100vh;
+    overflow: hidden;
     }
     .playerControls {
     position: fixed;
