--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide1/slide1Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide1/slide1Html.html
@@ -5,9 +5,14 @@
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <style type="text/css">
-  .mainWindow {
+  body {
+    margin: 0;
+    text-align: center;
+}
+.mainWindow {
     position: fixed;
     left: 0%;
+    top: 0%
     margin: auto;
     width: 100%;
     height:100vh;
