--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide1/slide1Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide1/slide1Html.html
@@ -6,7 +6,8 @@
   <!DOCTYPE html>
   <style type="text/css">
   body {
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
     text-align: center;
 }
 .mainWindow {
@@ -14,6 +15,7 @@
     left: 0%;
     top: 0%
     margin: auto;
+    padding:0;
     width: 100%;
     height:100vh;
     overflow: hidden;
