--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -5,22 +5,30 @@
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <style type="text/css">
+  body {
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+  }
   .mainWindow {
-     position: fixed;
+    position: fixed;
     left: 0%;
+    top: 0%
     margin: auto;
+    padding:0;
     width: 100%;
     height:100vh;
     overflow: hidden;
-    }
+  }
     .playerControls {
     position: fixed;
+    left: 0px;
     padding: 1px;
     bottom: 0px;
     margin: auto;
     width: 100%;
   }
-</style>
+  </style>
 </head>
 <body bgcolor="#D3D3D3">
   <div id="main" class="mainWindow" style="align-content: center;"></div>
