--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -32,7 +32,7 @@
 </head>
 <body bgcolor="#D3D3D3">
   <div id="main" class="mainWindow" style="align-content: center;"></div>
-  <audio id='music' controls='controls' class="playerControls" autoplay>
+  <audio id='music' controls='controls' class="playerControls">
     <source id="audio" src='slide2Audio.ogg' type='audio/ogg' />
   </audio>
 </body>
