--- a/New Hire Training/Appretice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story.html
@@ -6,7 +6,7 @@
     <!-- Created using Storyline 360 - http://www.articulate.com  -->
     <!-- version: 3.22.17236.0 -->
 
-    <title>storyLineSample</title>
+    <title>Basic_Electricity</title>
     <style>
         body {
             background: #ffffff;
