--- a/New Hire Training/Appretice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_html5.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/Basic_Electricity - Storyline output/story_html5.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <!-- Created using Storyline 360 - http://www.articulate.com  -->
   <!-- version: 3.22.17236.0 -->
-  <title>storyLineSample</title>
+  <title>Basic_Electricity</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimal-ui" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -36,7 +36,7 @@
       productChannel: 'stable',
       publishSource: 'storyline',
       aid: 'auth0|5c0709041a50a62db1ced5f1',
-      cid: '3129cdaf-1501-409d-85f0-b0366fd34497',
+      cid: '9976981a-7e6a-4499-a4a0-a724d3bb1f3d',
       playerVersion: '3.22.17236.0',
       maxIosVideoElements: 5,
 
@@ -112,7 +112,7 @@
   </script>
 
   <div class="mobile-load-title-overlay">
-    <div class="mobile-load-title">storyLineSample</div>
+    <div class="mobile-load-title">Basic_Electricity</div>
   </div>
   <script>
     
