--- a/Menu.html
+++ b/Menu.html
@@ -58,9 +58,7 @@
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Mini Manual Training/Mini Manual Training.html">Mini Manual Training</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Basic Electricity/Basic Electricity.html">Basic Electricity</a>
     <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/monogram_range_single_relay/Monogram Single Relay.html">Monogram Oven Single Relay</a>
-    <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Apprentice_Basic_Electricity/Basic Electricity.html">Pizas Sample</a>
-    <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/Appretice_Basic_Electricity_Test/Basic Electricity.html">Slide 2</a>
-    <a target="_blank" href="https://robertmayeight.github.io/Training/New Hire Training/storyLineSample/story_html5.html">Story Line Test</a>
+    <a target="_blank" href="https://robertmayeight.github.io/Training/New%20Hire%20Training/Appretice_Basic_Electricity_Test/Basic_Electricity%20-%20Storyline%20output/story_html5.html">Basic Electricity - Storyline</a>
   </div>
 </div>
 </body>
