--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide3/Slide3Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide3/Slide3Html.html
@@ -5,27 +5,35 @@
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <style type="text/css">
+  body {
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+  }
   .mainWindow {
     position: fixed;
     left: 0%;
+    top: 0%
     margin: auto;
+    padding:0;
     width: 100%;
     height:100vh;
     overflow: hidden;
-    }
+  }
     .playerControls {
     position: fixed;
+    left: 0px;
     padding: 1px;
-    bottom: 2%;
+    bottom: 0px;
     margin: auto;
-    width: 98%;
+    width: 100%;
   }
-</style>
+  </style>
 </head>
 <body bgcolor="#D3D3D3">
   <div id="main" class="mainWindow" style="align-content: center;"></div>
-  <audio id='music' controls='controls' class="playerControls">
-    <source src='slide2Audio.ogg' type='audio/ogg' />
+  <audio id='music' controls='controls' class="playerControls" style="opacity: 0">
+    <source id="audio" src='slide3Audio.ogg' type='audio/ogg' />
   </audio>
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -34,5 +42,5 @@
 <script src="../../../JavaScriptLibraries/draggable.js"></script>
 <script src="../../../JavaScriptLibraries/DrawSVGPlugin.min.js"></script>
 <script src="../../../JavaScriptLibraries/MorphSVGPlugin.js"></script>
-<script src="slide2Js.js"></script>
+<script src="slide3Js.js"></script>
 </html>
