--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -28,9 +28,17 @@
     margin: auto;
     width: 100%;
   }
+  .slideHeading{
+    position: fixed;
+    margin: auto;
+    width: 100%;
+    top: 20%
+    font-size: xx-large;
+  }
   </style>
 </head>
 <body bgcolor="#D3D3D3">
+ <div class="slideHeading">The Atom</div>
   <div id="main" class="mainWindow" style="align-content: center;"></div>
   <audio id='music' controls='controls' class="playerControls" style="opacity: 0">
     <source id="audio" src='slide2Audio.ogg' type='audio/ogg' />
