--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide3/Slide3Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide3/Slide3Html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Apprentice - Basic Electricity</title>
+  <title>Apprentice - Basic Electricity Slide 3</title>
   <meta charset="UTF-8">
   <!DOCTYPE html>
   <style type="text/css">
