--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -9,6 +9,7 @@
     padding: 0px;
     margin: 0px;
     text-align: center;
+    background: red;
   }
   .mainWindow {
     position: fixed;
@@ -37,10 +38,11 @@
   }
   </style>
 </head>
-<body bgcolor="#D3D3D3">
+<body bgcolor=red>
+  Module Loading
   <div id="main" class="mainWindow" style="align-content: center;"></div>
   <audio id='music' controls='controls' class="playerControls" style="opacity: 0">
-    <source id="audio" src='slide2Audio.ogg' type='audio/ogg' />
+    <!-- <source id="audio" src='slide2Audio.ogg' type='audio/ogg' /> -->
   </audio>
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
