--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -9,7 +9,7 @@
     padding: 0px;
     margin: 0px;
     text-align: center;
-    background: green;
+    background: black;
   }
   .mainWindow {
     position: fixed;
@@ -39,7 +39,6 @@
   </style>
 </head>
 <body bgcolor=green>
-  Module Loading AGAIN
   <div id="main" class="mainWindow" style="align-content: center;"></div>
   <audio id='music' controls='controls' class="playerControls" style="opacity: 0">
     <!-- <source id="audio" src='slide2Audio.ogg' type='audio/ogg' /> -->
