--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide2/slide2Html.html
@@ -38,11 +38,9 @@
   }
   </style>
 </head>
-<body bgcolor=green>
+<body>
   <div id="main" class="mainWindow" style="align-content: center;"></div>
-  <audio id='music' controls='controls' class="playerControls" style="opacity: 0">
-    <!-- <source id="audio" src='slide2Audio.ogg' type='audio/ogg' /> -->
-  </audio>
+  <audio id='music' controls='controls' class="playerControls" style="opacity: 0"></audio>
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="../../../JavaScriptLibraries/jquery-3.2.1.min.js"></script>
