--- a/New Hire Training/Appretice_Basic_Electricity_Test/slide3/slide3Html.html
+++ b/New Hire Training/Appretice_Basic_Electricity_Test/slide3/slide3Html.html
@@ -9,7 +9,7 @@
     padding: 0px;
     margin: 0px;
     text-align: center;
-    background: black;
+    background: white;
   }
   .mainWindow {
     position: fixed;
