--- a/New Hire Training/Apprentice_Basic_Electricity/Basic_Electricity.html
+++ b/New Hire Training/Apprentice_Basic_Electricity/Basic_Electricity.html
@@ -113,7 +113,7 @@ position: fixed;
   </div>
   <div id="hiddenWindow" class="hidden">
   </div>
-  <audio id='music' controls='controls' class="playerControls"></audio>
+  <audio id='music' controls='controls' class="playerControls" preload"auto"></audio>
    <div id="menu"><img src="Menu_Icon.png" width="30%" onclick="toggleMenuVisibility()" style="cursor: pointer;  opacity:.5"> </div>
     <div id="menuItems" class="menuItemsHidden">
       <a href="#" onclick="changeSlides(slide0)">Home</a><br><br>
@@ -189,7 +189,7 @@ position: fixed;
   }
 
 </script>
-<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="../../JavaScriptLibraries/d3.min.js"></script>
 <script src="../../JavaScriptLibraries/TweenMax.min.js"></script>
 <script src="../../JavaScriptLibraries/draggable.js"></script>
 <script src="../../JavaScriptLibraries/DrawSVGPlugin.min.js"></script>
